@@ -2,6 +2,7 @@ Update Versions.java on adding new versions
 
 1.1.0
 New feature: `Math`
+New internal feature: `AtlasLoomArray`
 New internal feature: `MeshManager`
 New internal feature: `MeshManager3`
 New internal feature: `MeshManagerConstant`
@@ -79,7 +80,7 @@ New feature: Developers can load texture by int array
 New feature: Developers can generate image atlas by `AtlasLoom`
 New feature: `GLProgram#vertexAttribPointer`
 Fixed a fatal bug: Program crashed when creating shaders
-    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.\\0
+    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.[NUL]
     	at org.overrun.glutils.GlProgram.createShader(GlProgram.java:84)
 
 0.2.0
